[package]
name = "word_counter"
version = "0.1.0"
authors = ["iyuroch <iyuroch@gmail.com>"]

[profile.test]
opt-level = 3

[dependencies]
serde = "1.0.66"
serde_derive = "1.0.66"
serde_json = "1.0.20"
spmc = "0.2.2"
rayon = "1.0.1"
chan = "0.1.21"
canal = "0.1.3"
crossbeam-channel = "0.2.2"
crossbeam = "0.3.2"
